--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -137,7 +137,7 @@ To turn ON the SumoRobot slide the big power switch to the right (ON). To turn t
 
 In order to charge the SumoRobot, plug the micro USB into the SumoRobot's microcontroller. The red charging LED will light up. The SumoRobot can be charged in both ON and OFF state. Once the battery is full the red LED light will turn OFF.
 
-Connecting to WiFi is possible using the [SumoManager](/kits/sumorobot/sumomanager) app. Keep in mind to use the SumoManager, the SumoRobot has to be turned ON. The blue LED under the SumoRobot will blink when it's trying to connect to the WiFi network. Once connected to WiFi the blue LED will be steady ON.
+Uploading / updating the SumoFirmware is possible with the [SumoManager](/kits/sumorobot/sumomanager) app. Keep in mind to use the SumoManager, the SumoRobot has to be turned ON. The blue LED under the SumoRobot will blink when it's not connected to the SumoInterface, once connected the blue LED will be steady ON.
 
 The yellow LED lights indicate if the SumoRobot is seeing a line. This works only on the SumoField or on a white paper with a thick black line. There are two line sensors under the plow of the SumoRobot, on the left and right. You can print your own SumoField on a A0 paper at a local print shop, download it [here](/assets/docs/sumofield.pdf).
 
