--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -98,7 +98,9 @@ Break away the 2 remaining tabs on each side of the SumoBoard.
 
 ![sumoboard](/assets/img/v04X/step11_3.jpg){: .image .instructions}
 
-Place the servomotors on the SumoBoard with the zip ties underneath them, on top of the labels LEFT_SERVO and RIGHT_SERVO. The positioning is important - the servomotors cables should go towards the back of the robot, where the power switch is. Afterwards, place the black breakaway tabs on top of the servos. Insert the screws from up, the nuts from below and then screw them together.
+If you have white zip ties: place them under the servomotors on the SumoBoard on top of the labels LEFT_SERVO and RIGHT_SERVO.  
+If you have black cable ties: then you can place them either under the servomotors or under the breakaway tabs.  
+The positioning of the servomotors is important - their cables should go towards the back of the robot, where the power switch is. Afterwards, place the black breakaway tabs on top of the servos. Insert the screws from up, the nuts from below and then screw them together.
 
 ![sumoboard](/assets/img/v04X/step11_4.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step11_5.jpg){: .image .instructions}
@@ -115,7 +117,9 @@ Put the black and red battery holder wire trough the holes near the pads labeled
 ![sumoboard](/assets/img/v04X/step13_4.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step13_5.jpg){: .image .instructions}
 
-Finally insert the battery, be careful to insert it the right way. The bigger pad on the battery is - (GND) and goes to the side with the black cable. The smaller pad is + and goes to the side of the red cable.
+Then insert the battery, be careful to insert it the right way. The bigger pad on the battery is - (GND) and goes to the side with the black cable. The smaller pad is + and goes to the side of the red cable.
+
+Next pull tight the white zip ties or the black cable ties around the battery.
 
 ![sumoboard](/assets/img/v04X/step_13_6.jpg){: .image .instructions}
 
@@ -127,7 +131,7 @@ Use any strong alcohol to clean the PCB with a toothbrush or wipe.
 
 TIP: You can add some hot glue or other means to make the wheel have more friction.
 
-Finally add a name on your SumoRobot and your done with assembling it!
+Finally add a name on front of your SumoRobot. Congratulations, your done with assembling your SumoRobot!
 
 ![sumoboard](/assets/img/v04X/final.jpg){: .image .instructions}
 
