--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -20,43 +20,46 @@ Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place
 ![sumoboard](/assets/img/v04X/step1_2.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step1_3.jpg){: .image .instructions}
 
-Cut the remainder of the resistor's legs and keep the remainders on the side, for a later step.
+Cut the remainder of the resistor's legs and keep the remainders on the side, for a later step. Inside the boundaries of the right and left servo, try to cut the solder joints as flat as possible. So the servomotors can fit on better later.
 
 ![sumoboard](/assets/img/v04X/step1_4.jpg){: .image .instructions}
 
 ### 2. Solder the phototransistors
 
-Find the two phototransistors - these are the light sensors that help the SumoRobot detect the line on the SumoRing. They are polarized, therefore pay close attention to the white drawing on the SumoBoard. The drawing corresponds to the shape of the phototransistor, therefore showing you the right way to place it on the board.  Bend the legs 90 degrees, place them on the board (labels: D1, D2 and D3, D4) and then solder them.
+Find the two phototransistors - these are the light sensors that help the SumoRobot detect the line on the SumoRing. They are polarized, therefore pay close attention to the white drawing on the SumoBoard. The drawing corresponds to the shape of the phototransistor, therefore showing you the right way to place it on the board. One corner of the phototransistor is cut a little bit, which should match up with the drawing on the SumoBoard. Insert the phototransistors into the 4 holes (labels: D1, D2 and D3, D4) and bend their legs 90 degrees to match up with the drawing on the SumoBoard. Finally solder them into place and cut the remainder legs.
 
 ![sumoboard](/assets/img/v04X/step2_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step2_2.jpg){: .image .instructions}
 
 ### 3. Solder the microcontroller
 
-For this step you need the microcontroller, the pair of male pin headers and the pair of female pin headers. Place the female pin headers on the markings J4 and J5 on the board. Afterwards put the male pin headers into the microcontroller and place them on the board, into the female pin headers. Then solder the male pin headers to the microcontroller and the female pin headers to the SumoBoard.
+For this step you need the microcontroller, the pair of male pin headers and the pair of female pin headers. Place the female pin headers on the markings J4 and J5 on the board. Afterwards insert the male pin headers into the female pin headers and finally place the microcontroller on top of the male pin headers. Then solder the male pin headers to the microcontroller and the female pin headers to the SumoBoard.
 
 ![sumoboard](/assets/img/v04X/step_3_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step3_2.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step3_3.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step3_4.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step3_5.jpg){: .image .instructions}
+
+Cut the female pin header solder joints as flat as possible, so later the servomotors can fit on them better.
+
 ![sumoboard](/assets/img/v04X/step_3_6.jpg){: .image .instructions}
 
 ### 4. Solder the servomotor pin headers
 
-The 2 pin headers (each one has 3 pins) for the servomotors go to the holes with the labels LEFT_SERVO (J2) and RIGHT_SERVO (J3). Place the pin header and solder one of its pins first. Then try to align the pin header 90 degrees with the SumoBoard while reheating the previously made solder connection and pressing it from the other side.
+The 2 pin headers (each one has 3 pins) for the servomotors go to the holes with the labels LEFT_SERVO (J2) and RIGHT_SERVO (J3). Place the pin header and solder one of its pins first. Then try to align the pin header perpendicular with the SumoBoard while reheating the previously made solder connection and pressing it from the other side. Be careful not the touch or hold from the same pin you are soldering, it will get very hot.
 
 ![sumoboard](/assets/img/v04X/step4_1.jpg){: .image .instructions}
 
 ### 5. Solder the capacitors
 
-The two green cylinders are the capacitors and they should be placed on the C1 and C2 markings. They have polarity, which means that you have to be careful how you place them on the board. On one side of the capacitor's body there is a grey stripe. The capacitor's leg from the striped side goes into the SumoBoard hole which is marked as a half circle filled with white colour. After you make sure you got the polarity right, solder the capacitors on the SumoBoard.
+The two green cylinders are the capacitors and they should be placed on the C1 and C2 markings. They have polarity, which means that you have to be careful how you place them on the board. On one side of the capacitor's body there is a grey stripe. The capacitor's leg from the striped side goes into the SumoBoard hole which is marked as a half circle filled with white colour. After you make sure you got the polarity right, solder the capacitors on the SumoBoard. Cut the capacitor solder joints as flat as possible, so later the servomotors can fit on them better.
 
 ![sumoboard](/assets/img/v04X/step5_1.jpg){: .image .instructions}
 
 ### 6. Solder the plow
 
-Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs to connect the plow to the main board. After you attach everything together, apply solder on both sides of the board to the 2 tabs.
+Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs to connect the plow to the mainboard. After you attach everything together, solder the tabs to the plow and mainboard from both sides. Try to keep the plow pressed towards the mainboard while soldering, so it doesn't move out of place.
 
 ![sumoboard](/assets/img/v04X/step6_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step6_3.jpg){: .image .instructions}
