--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -14,13 +14,13 @@ Big blue resistors > R1, R2 = 0.1 ohm
 Medium blue resistors > R3, R4, R5, R6, R7 = 100 ohm  
 Small green resistors > R8, R9, R10, R11 = 100K ohm
 
-Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in any of orientation on the board.
+Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in either of the 2 orientations on the board.
 
 ![sumoboard](/assets/img/v04X/step1_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step1_2.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step1_3.jpg){: .image .instructions}
 
-Cut the remainder of the resistor's legs and keep the remainders on the side, for a later step. Inside the boundaries of the right and left servo, try to cut the solder joints as flat as possible. So the servomotors can fit on better later.
+Cut the remainder of the resistor's legs. Inside the boundaries of the right and left servo, try to cut the solder joints as flat as possible. So later the servomotors can fit on the mainboard better.
 
 ![sumoboard](/assets/img/v04X/step1_4.jpg){: .image .instructions}
 
@@ -67,19 +67,23 @@ Break apart the plow and the two silver breakaway tabs. We will use those 2 tabs
 
 ### 7. Solder the LEDs
 
-Find the three LEDs - one blue and two yellow. Place the yellow ones in the holes with labels D6 and D7, while the blue one in the hole marked as D5. Be aware of the polarity again. Take a closer look and notice how the specific shape of the LED corresponds to the drawing on the board. You should place the shorter leg of the LED into the hole with a rectangular pad of the SumoBoard. After you make sure the polarity has the right orientation on the board, solder the yellow LEDs. The blue LED is placed in a more specific way. After you place the shorter leg in the hole marked with a rectangular shape, push the longer trough the J11 hole on the mainboard.
+Find the three LEDs - one blue and two yellow. Place the yellow ones in the holes with labels D6 and D7, while the blue one in the holes marked as D5. Be aware of the polarity again. Take a closer look and notice how the specific shape of the LED corresponds to the drawing on the board. You should place the shorter leg of the LED into the hole with a rectangular pad of the SumoBoard.
+
+If you have SumoBoard v0.4.0 or v0.4.1 then the blue LED is placed in a more specific way. After you place the shorter leg in the hole marked with a rectangular shape, push the longer leg trough the J11 hole on the mainboard.
+
+After you make sure the polarity has the right orientation on the board, solder the LEDs and trim the legs.
 
 ![sumoboard](/assets/img/v04X/step7_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step7_2.jpg){: .image .instructions}
 
-Take the remainders of the resistors' legs from step 2. Place them in the holes on the board as shown on the image below. Solder them on both sides of the board, as well.
+Take the remainders of the LEDs' legs and bend them into an U shape. Then place them in the holes on the board (J8 and J9) as shown on the image below. This will establish electrical connection with the LEDs and the sensors from the plow to the mainboard. Solder the legs into place and cut the excess.
 
 ![sumoboard](/assets/img/v04X/step8_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step8_2.jpg){: .image .instructions}
 
 ### 8. Solder the ultrasonic sensor
 
-Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to see" the opponent on the SumoRing. Push it in the holes labeles as J1 on the board and solder it into place.
+Find the ultrasonic sensor. This one helps the robot to detect objects, i.e. "to see" the opponent on the SumoRing. Push it in the holes labeled as J1 on the board and solder it into place.
 
 ![sumoboard](/assets/img/v04X/step9_1.jpg){: .image .instructions}
 ![sumoboard](/assets/img/v04X/step9_2.jpg){: .image .instructions}
