--- a/_pages/kits/sumohardware/v04X.md
+++ b/_pages/kits/sumohardware/v04X.md
@@ -8,11 +8,11 @@ permalink: "/kits/sumorobot/sumohardware/v04X"
 
 ### 1. Solder the resistors
 
-There are 11 resistors in the kit: 2 big blue, 4 medium blue and 4 small green resistors - all of them with different colour codes indicating the resistance value. Flip the SumoBoard on its backside and place them according to the numbers shown below:
+There are 11 resistors in the kit: 2 big blue, 5 medium blue and 4 small blue or green resistors - all of them with different colour codes indicating the resistance value (ohm). Flip the SumoBoard on its backside and place them according to the numbers shown below:
 
 Big blue resistors > R1, R2 = 0.1 ohm  
 Medium blue resistors > R3, R4, R5, R6, R7 = 100 ohm  
-Small green resistors > R8, R9, R10, R11 = 100K ohm
+Small blue or green resistors > R8, R9, R10, R11 = 100 000 ohm
 
 Bend the resistor legs 90 degrees and place them on the SumoBoard. You can place and solder them one by one, or all together.  They don't have polarity, which means that you can place them in either of the 2 orientations on the board.
 
